# Learn

./: .gitignore  Makefile  README.md  environment.yml  learn.db  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml
data/: sample.txt
src/learn/: __init__.py  card_gen.py  cli.py  pdf_ingest.py  srs.py  store.py
src/learn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_card_gen_llm.py  test_dummy.py  test_pdf_ingest.py  test_srs.py  test_store.py
