[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn"
version = "0.1.0"
description = "Generate flashcards from documents with Anki-style SRS + Pomodoro."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pypdf==4.2.0",
  "python-dotenv==1.0.1",
]

[project.optional-dependencies]

[project.scripts]
learn = "learn.cli:main"

dev = [
  "pytest==8.2.0",
  "black==24.8.0",
  "ruff",
  "mypy",
]

[tool.setuptools]
package-dir = {"" = "src"}

# Either keep explicit list:
# packages = ["learn"]
# ...or use discovery (recommended), which also catches subpackages like learn.something:
[tool.setuptools.packages.find]
where = ["src"]
include = ["learn*"]

[tool.setuptools.package-data]
learn = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]
extend-exclude = ["data", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL"]
ignore = ["UP017"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
strict = true
exclude = '^(\.venv/|data/|build/|dist/|\.mypy_cache/|\.ruff_cache/|\.pytest_cache/)'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
